--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,9 +3,20 @@
 // <weight>: Use a value from 100 to 900
 :root{
     --primary-color: #fe2c55;
+    --black: #000;
+    --white: #fff;
+    --text-color: #333;
+
+
+    //default
+    --default-layout-header-height: 60px;
+    --default-layout-width: 1150px;
+    --default-layout-horizontal-spacer: 24px;
 }
 
 *{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -19,4 +30,14 @@ body {
     line-height: 1.5;
     font-size: 1.6rem;
     text-rendering: optimizeSpeed;
+}
+
+button, input, [tabindex]{
+    outline: none;
+    border: none;
+}
+
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
 }
