--- a/src/layouts/Button/button.module.scss
+++ b/src/layouts/Button/button.module.scss
@@ -16,7 +16,6 @@
     border: 1px solid transparent;
     user-select: none;
 
-
     + .wrapper {
         margin-left: 8px;
     }
@@ -37,23 +36,29 @@
 }
 
 .outline {
-    color: var(--primary);
+    color: var(--primary-color);
+    max-height: 38px;
+    max-width: 100px;
     border-color: currentColor;
+    border-radius: 0px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    -ms-border-radius: 0px;
+    -o-border-radius: 0px;
 
     &:hover {
         background-color: rgba(254, 44, 85, 0.06);
     }
 }
 
-.rounded{
+.rounded {
     border-radius: 999px;
     -webkit-border-radius: 999px;
     -moz-border-radius: 999px;
     -ms-border-radius: 999px;
     -o-border-radius: 999px;
     box-shadow: 0 2px 8px rgb(0 0 0 / 6%);
-    border-color: rgba(22,24,35,0.12);
-    
+    border-color: rgba(22, 24, 35, 0.12);
 }
 
 .text {
