--- a/src/layouts/DefaultLayout/defaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/defaultLayout.module.scss
@@ -8,6 +8,7 @@
 
 .container{
     width: var(--default-layout-width);
+    max-width: 100%;
     padding: 0 var(--default-layout-horizontal-spacer);
     margin-top: 60px;
     display: flex;
@@ -15,7 +16,7 @@
 
 .content{
     flex: 1;
-    box-shadow: 1px 0px 1px rgb(0 0 0/ 12%);
+    
 
 }
 
